/*
 * Copyright (C) 2024 by Fonoster Inc (https://fonoster.com)
 * http://github.com/fonoster/fonoster
 *
 * This file is part of Fonoster
 *
 * Licensed under the MIT License (the "License");
 * you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 *    https://opensource.org/licenses/MIT
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package fonoster.acl.v1beta2;

// AccessControlList(ACL) service definition
service ACL {
  // Create a new ACL
  rpc CreateACL (CreateACLRequest) returns (CreateACLResponse) {}
  // Update an existing ACL
  rpc UpdateACL (UpdateACLRequest) returns (UpdateACLResponse) {}
  // Get an existing ACL
  rpc GetACL (GetACLRequest) returns (AccessControlList) {}
  // Delete an existing ACL
  rpc DeleteACL (DeleteACLRequest) returns (DeleteACLResponse) {}
  // Get a list of ACLs
  rpc ListACL (ListACLsRequest) returns (ListACLsResponse) {}
}

// The message for AccessControlList resource
message AccessControlList {
  // The ACL reference
  string ref = 1;
  // A friendly name for the ACL
  string name = 2;
  // The list of allowed IP addresses
  repeated string allow = 3;
  // The list of denied IP addresses
  repeated string deny = 4;
  // The date the ACL was created
  int32 created_at = 5;
  // The date the ACL was last updated
  int32 updated_at = 6;
}

// The request message for the AccessControlList.CreateACL method
message CreateACLRequest {
  // A friendly name for the ACL
  string name = 1;
  // The list of allowed IP addresses
  repeated string allow = 2;
  // The list of denied IP addresses
  repeated string deny = 3;
}

// The response message for the AccessControlList.CreateACL method
message CreateACLResponse {
  // The ACL reference
  string ref = 1;
}

// The request message for the AccessControlList.UpdateACL method
message UpdateACLRequest {
  // The ACL reference
  string ref = 1;
  // A friendly name for the ACL
  string name = 2;
  // The list of allowed IP addresses
  repeated string allow = 3;
  // The list of denied IP addresses
  repeated string deny = 4;
} 

// The response message for the AccessControlList.UpdateACL method
message UpdateACLResponse {
  // The ACL reference
  string ref = 1;
}

// The request message for the AccessControlList.GetACL method
message GetACLRequest  {
  // The ACL reference
  string ref = 1;
}

// The request message for the AccessControlList.DeleteACL method
message DeleteACLRequest  {
  // The ACL reference
  string ref = 1;
}

// The response message for the AccessControlList.DeleteACL method
message DeleteACLResponse  {
  // The ACL reference
  string ref = 1;
}

// The request message for the AccessControlList.ListACL method
message ListACLsRequest {
  // The maximum number of items in the list
  int32 page_size = 1;
  // The next_page_token value returned from the previous request, if any
  string page_token = 2;
}

// The response message for the AccessControlList.ListACL method
message ListACLsResponse {
  // List of items
  repeated AccessControlList items = 1;
  // Token to retrieve the next page of results, or empty if there are no more results in the list
  string next_page_token = 2;
}